--- a/app/views/artists/_artworks.html.slim
+++ b/app/views/artists/_artworks.html.slim
@@ -3,6 +3,18 @@ h2
 = simple_form_for @artist, remote: true do |f|
   = hidden_field_tag(:stage, 'artworks')
   .p-3
+    = f.label :featured_artwork
+    .stim-select.mb-2[data-controller="select"]
+      - @artist.artworks.each do |artwork|
+        .stim-select-button.p-0.mb-2[data-select-value="#{artwork.id}" data-action="click->select#update" data-target="select.button" role="button" title="#{artwork.name}"]
+          - if artwork.photos.present?
+            .color-strip-full.bg-pink[style="background-image: url('#{cl_image_path artwork.photos.first.attachment, width: 70, height: 50, crop: :fill}')"]
+          - else
+            .color-strip-full.bg-pink
+              span.small-text.c-dark-blue
+                = artwork.name
+      = f.input :featured_artwork_id, as: :hidden, input_html: { 'data-target' => 'select.input' }
+  .p-3
     ul.link-list
       .collection-fields
         = f.simple_fields_for :collections do |collection_form|
@@ -14,8 +26,8 @@ h2
                   = collection_form.object.name
                 .image
                   - if collection_form.object.photos.present?
-                    = cl_image_tag collection_form.object.photos.first.attachment
+                    = cl_image_tag collection_form.object.photos.first.attachment, width: 70, height: 80, crop: :fill
   .p-3
     = link_to '+ Add collection', new_artist_collection_path(@artist), remote: true, class: 'button-tertiary w-100'
   .p-3
-    = f.submit "Save Order"
+    = f.submit "Save"
