--- a/app/assets/stylesheets/components/_stim_modal.scss
+++ b/app/assets/stylesheets/components/_stim_modal.scss
@@ -11,11 +11,10 @@
 }
 
 .stim-modal{
-  min-width: 60ch;
-  width: 80vw;
+  width: 60ch;
   max-width: 100vw;
 
-  min-height: calc(1.5rem * 18);
+  min-height: calc(1.5rem * 23);
   max-height: 100vh;
 
   position: fixed;
