--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -9,10 +9,4 @@ div id="content" data-controller="modal"
     - case @artist.layout
     - when 1 
       == render 'layout_1', artist: @artist
-  div class="stim-modal d-none" data-target='modal.modal'
-    .stim-modal-container
-      .stim-modal-close-button data-action="click->modal#hide"
-        a href="#"
-          <i class="fas fa-times"></i>
-      .stim-modal-content data-target='modal.content'
-  div class="stim-modal-backdrop d-none" data-target='modal.backdrop' data-action='click->modal#hide'
+  == render 'shared/stim_modal'
