add featured artwork component

--- a/app/views/artists/_layout.html.slim
+++ b/app/views/artists/_layout.html.slim
@@ -17,6 +17,9 @@
           | 3
         .color-strip-full.bg-pink
       = f.input :layout, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.input' }
+      p.mt-3.c-light-gray.small
+        em
+          | The different layouts provide great templates for each stage of your career. If you're starting out and want a cleaner page, choose Layout 1 (which does not display links or upcoming projects). To show more of the available information, choose Layout 2. If you're more established, choose Layout 3, which features an expanded resume section.
   h2
     | Banner Content
   .p-3
