--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -4,3 +4,7 @@
     p
       em
         = link_to 'See Full Profile >', artist_resume_blocks_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link'
+- if artist.featured_artwork.present?
+  .row#featured-artwork
+    .col
+      == render 'featured_artwork', artwork: artist.featured_artwork
