show slider when clicking on artwork

--- a/app/views/artworks/_fields.html.slim
+++ b/app/views/artworks/_fields.html.slim
@@ -11,6 +11,8 @@
           i.fas.fa-times
         .color-strip-full.bg-gold
       = f.input :highlight, as: :hidden, input_html: { 'data-target' => 'select.input' }
+      p.mt-3.mb-3.small.c-light-gray
+        | The highlighted images are the ones that show first on your page. It's recommended to pick 4-6.
   = f.input :name
   = f.input :description
   = f.input :medium
