--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,5 @@
 // Import your components CSS files here.
+
 @import "alert";
 @import "navbar";
 @import "header";
@@ -21,3 +22,4 @@
 @import "video_banner";
 @import "resume";
 @import "featured_artwork";
+@import "artwork";
