--- a/app/views/shared/_stim_modal.html.slim
+++ b/app/views/shared/_stim_modal.html.slim
@@ -1,5 +1,5 @@
 div class="stim-modal d-none" data-target='modal.modal'
-  .stim-modal-container
+  .stim-modal-container[data-target='modal.container']
     .stim-modal-close-button data-action="click->modal#hide"
       a href="#"
         <i class="fas fa-times"></i>
