--- a/app/assets/stylesheets/components/_artwork.scss
+++ b/app/assets/stylesheets/components/_artwork.scss
@@ -1,8 +1,9 @@
 .artwork{
   .artwork-photos{
     img{
-      max-height: 50rem;
       min-height: 20rem;
+      max-height: 100vh;
+      width: auto;
     }
     margin-bottom: 5rem;
   }
