--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -8,5 +8,5 @@ div id="content" data-controller="modal"
   .container
     - case @artist.layout
     - when 1 
-      == render 'layout_1', artist: @artist
+      == render 'layout_1', artist: @artist, artworks: @artworks
   == render 'shared/stim_modal'
