design resume sidebar

--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -9,4 +9,6 @@ div id="content" data-controller="modal"
     - case @artist.layout
     - when 1 
       == render 'layout_1', artist: @artist, artworks: @artworks
+    - when 2 
+      == render 'layout_2', artist: @artist, artworks: @artworks
   == render 'shared/stim_modal'
