--- a/app/views/artists/_layout_2.html.slim
+++ b/app/views/artists/_layout_2.html.slim
@@ -37,8 +37,10 @@
           h3
             | Artworks
           hr.lines.w-100.ml-3
-        .col
+        .col-12
           == render 'artworks/gallery', artworks: artworks
+        .col-12
+          = link_to "See all Artwork", artist_collections_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', class: 'button-tertiary w-100'
     - if artist.links.present?
       .row#links-gallery.mb-5
         .col-12.d-flex.line-left
