--- a/app/views/upcoming_projects/_gallery.html.slim
+++ b/app/views/upcoming_projects/_gallery.html.slim
@@ -2,11 +2,11 @@
   .row
     - upcoming_projects.each do |upcoming_project|
       .col-12.col-sm-6.col-lg-4
-        .row.mb-3
+        .row.mb-3.mr-2
           - if upcoming_project.photo.present?
             .col-12.upcoming-projects-gallery-photo[style="background-image: url('#{cl_image_path upcoming_project.photo}')"]
           - else
-            .col-12.upcoming-projects-gallery-photo
+            .col-12.upcoming-projects-gallery-photo.bg-dark-blue
           .col-12
             h5
               = upcoming_project.title
