--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -13,5 +13,7 @@
     h3
       | Artworks
     hr.lines.w-100.ml-3
-  .col
+  .col-12
     == render 'artworks/gallery', artworks: artworks
+  .col-12
+    = link_to "See all Artwork", artist_collections_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', class: 'button-tertiary w-100'
