--- a/app/views/artworks/_fields.html.slim
+++ b/app/views/artworks/_fields.html.slim
@@ -12,7 +12,7 @@
         .color-strip-full.bg-gold
       = f.input :highlight, as: :hidden, input_html: { 'data-target' => 'select.input' }
       p.mt-3.mb-3.small.c-light-gray
-        | The highlighted images are the ones that show first on your page. It's recommended to pick 4-6.
+        | The highlighted artworks are the ones that show first on your page. It's recommended to pick 4-6.
   = f.input :name
   = f.input :description
   = f.input :medium
