--- a/app/assets/stylesheets/components/_about_section.scss
+++ b/app/assets/stylesheets/components/_about_section.scss
@@ -9,7 +9,10 @@
 	.person-lockup {
 		@extend .mb-2;
 		.name-lockup {
-			h1 {
+      h4{
+        font-size: 1.3rem;
+      }
+			h5 {
 				font-size: 10px;
 			}
 		}
@@ -28,7 +31,7 @@
 	}
 	.text {
     @extend .mt-4;
-		h2 {
+		h4 {
 			font-size: 28px;
 		}
 		p {
