--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -4,8 +4,8 @@
 			<div class="backround bg-white shadow sb-light card card-artists"  data-toggle="modal" data-target="#modal_artist">
 				<div class="d-flex">
 					<div class="text-cards">
-						<h1 class="title">An Agency</h1>
-			      		<h2 class="color c-blue">For Artists</h2>
+						<h4 class="title">An Agency</h4>
+			      		<h5 class="color c-blue card-title">For Artists</h5>
 			      		<p class="mw-50">Combine the expertise that an agent can offer with the power of<br> connection only a digital platform can provide.</p>
 			      		<p class="fake-link color c-blue">Read More</p>
 		      		</div>
@@ -17,8 +17,8 @@
 			<div class="backround c-light-gray bg-blue shadow sb-light card card-galleries" data-toggle="modal" data-target="#modal_galleries">
 				<%= image_tag "pic-2.png", style: "width: 100%" %>
 				<div class="text-cards">
-				<h1 class="color c-white title">A Solution</h1>
-		      	<h2 class="color c-white">For Galleries</h2>
+				<h4 class="color c-white title">A Solution</h4>
+		      	<h5 class="color c-white card-title">For Galleries</h5>
 		      	<p>Better than a personal assistant.</p>	
 		      	<p class="fake-link color c-white">Read More</p>
 	      	</div>
@@ -27,8 +27,8 @@
 		<div class="col-12 col-sm-6">
 			<div class="backround bg-white shadow sb-light card card-collectors" data-toggle="modal" data-target="#modal_collectors">
 				<div class="text-cards">
-					<h1 class="title">An Advisor</h1>
-		      		<h2 class="color c-blue">For Collectors</h2>
+					<h4 class="title">An Advisor</h4>
+		      		<h5 class="color c-blue card-title">For Collectors</h5>
 		      		<p>Invest like never before.</p>
 		      		<p class="fake-link color c-blue">Read More</p>
 	      		</div>
