add into fields

--- a/app/views/admin/dashboard.html.slim
+++ b/app/views/admin/dashboard.html.slim
@@ -7,7 +7,7 @@
   .row.pt-3
     .col
       h2
-        | All Artists
+        | Artists
   .row
     .col
       ul.link-list
@@ -23,23 +23,42 @@
               .image
                 - if artist.photo.present?
                   = cl_image_tag artist.photo
-.container.news-post-list
-  .row.pt-3
-    .col
-      h2
-        | All News Posts
+.container.other-settings
   .row
-    .col
-      ul.link-list
-        = link_to new_news_post_path do
-          li.text-center
-            .text
-              | + Add Post
-        - @news_posts.each do |news_post|
-          = link_to edit_news_post_path(news_post) do
-            li
-              .text
-                = news_post.headline
-              .image
-                - if news_post.photo.present?
-                  = cl_image_tag news_post.photo
+    .col-12.col-sm-6
+      .row.pt-3
+        .col
+          h2
+            | News Posts
+      .row
+        .col
+          ul.link-list
+            = link_to new_news_post_path do
+              li.text-center
+                .text
+                  | + Add Post
+            - @news_posts.each do |news_post|
+              = link_to edit_news_post_path(news_post) do
+                li
+                  .text
+                    = news_post.headline
+                  .image
+                    - if news_post.photo.present?
+                      = cl_image_tag news_post.photo
+    .col-12.col-sm-6
+      .row.pt-3
+        .col
+          h2
+            | Artwork Categories
+      .row
+        .col
+          ul.link-list
+            = link_to new_category_path do
+              li.text-center
+                .text
+                  | + Add Category
+            - @categories.each do |category|
+              = link_to edit_category_path(category) do
+                li
+                  .text
+                    = category.name
