--- a/app/views/categories/new.html.slim
+++ b/app/views/categories/new.html.slim
@@ -3,12 +3,12 @@
   .row
     .col.text-center.pt-3.pb-3.bg-beige.w-100
       h1
-        | Edit News Post
+        | New Artwork Category
 .panel
   .row.mb-3
     .col
       = link_to "< Back", admin_dashboard_path, class: 'button-tertiary'
   .row
     .col
-      = render 'news_posts/fields'
+      = render 'fields'
 .ellipse
