make buttons buttons

--- a/app/views/artists/_navigation.html.slim
+++ b/app/views/artists/_navigation.html.slim
@@ -1,5 +1,10 @@
 nav#edit-navigation.secondary-navigation
   ul
+    - if current_user.admin?
+      li.text-center
+        = link_to admin_dashboard_path, class: 'button-tertiary' do
+          i.fas.fa-arrow-left.mr-2
+          | Back to Dashboard
     |  <li class="
     = "selected" if stage == :header || stage.blank?
     | ">
@@ -20,6 +25,7 @@ nav#edit-navigation.secondary-navigation
     = "selected" if stage == :upcoming_projects
     | ">
     = link_to 'Upcoming Projects', edit_artist_path(artist, stage: :upcoming_projects), remote: true
-    li
-      = link_to artist_path(referrer: :dashboard), target: :_blank do
-        | View Page <i class="fas fa-arrow-right"></i>
+    li.text-center
+      = link_to artist_path(referrer: :dashboard), target: :_blank, class: 'button-tertiary' do
+          | Preview Page
+          i.fas.fa-arrow-right.ml-2
