--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ html
   body
     = render 'shared/flashes'
     = render 'shared/header'
-    .page-wrap
+    main.page-wrap
       == yield
     = render 'shared/footer'
     = javascript_include_tag 'application'
