darken some colors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,7 @@ $beige-gradient: linear-gradient(67.97deg, #EDDFD6 3.78%, #FEF0E7 112.76%);
 $pink: #DDCDCA;
 $pink-gradient: linear-gradient(67.97deg, #EEDEDB 3.78%, #DDCDCA 112.76%);
 $gray: #0E0000;
-$light-gray: #D0D0D0;
+$light-gray: #C0C0C0;
 $white: white;
 $placeholder-gray: #bac0c5;
 $gold: #E6E0D4;
