--- a/app/views/artworks/_fields.html.slim
+++ b/app/views/artworks/_fields.html.slim
@@ -11,7 +11,7 @@
           i.fas.fa-times
         .color-strip-full.bg-gold
       = f.input :highlight, as: :hidden, input_html: { 'data-target' => 'select.input' }
-      p.mt-3.mb-3.small.c-light-gray
+      p.mt-3.mb-3.small.c-dark-gray
         | The highlighted artworks are the ones that show first on your page. It's recommended to pick 4-6.
   = f.input :name
   = f.association :category
