--- a/app/views/shared/_flashes.html.slim
+++ b/app/views/shared/_flashes.html.slim
@@ -1,12 +1,13 @@
-- if notice
-  .alert.alert-info.alert-dismissible.fade.show.m-1[role="alert"]
-    = notice
-    button.close[type="button" data-dismiss="alert" aria-label="Close"]
-      span[aria-hidden="true"]
-        | ×
-- if alert
-  .alert.alert-warning.alert-dismissible.fade.show.m-1[role="alert"]
-    = alert
-    button.close[type="button" data-dismiss="alert" aria-label="Close"]
-      span[aria-hidden="true"]
-        | ×
+#flashes
+  - if notice
+    .alert.alert-info.alert-dismissible.fade.show.m-1[role="alert"]
+      = notice
+      button.close[type="button" data-dismiss="alert" aria-label="Close"]
+        span[aria-hidden="true"]
+          | ×
+  - if alert
+    .alert.alert-warning.alert-dismissible.fade.show.m-1[role="alert"]
+      = alert
+      button.close[type="button" data-dismiss="alert" aria-label="Close"]
+        span[aria-hidden="true"]
+          | ×
