--- a/app/views/artists/_header.html.slim
+++ b/app/views/artists/_header.html.slim
@@ -36,6 +36,7 @@
   .p-3
     = render 'shared/photo_uploader', f: f, field: :photo, show_label: true, original_photo: @artist.photo
     = f.input :super_title
+    = f.input :name
     = f.input :title
     = f.input :description
     = f.input :button_text
