--- a/app/views/artists/_navigation.html.slim
+++ b/app/views/artists/_navigation.html.slim
@@ -12,7 +12,7 @@ nav#edit-navigation.secondary-navigation
     |  <li class="
     = "selected" if stage == :layout
     | ">
-    = link_to 'Layout', edit_artist_path(artist, stage: :layout), remote: true
+    = link_to 'Resume', edit_artist_path(artist, stage: :layout), remote: true
     |  <li class="
     = "selected" if stage == :artworks
     | ">
