--- a/app/views/artists/_header.html.slim
+++ b/app/views/artists/_header.html.slim
@@ -1,6 +1,27 @@
 = simple_form_for artist, remote: true do |f|
   h2
-    | Style
+    | Layout Style
+  .p-3
+    = f.label :layout
+    .stim-select.mb-2[data-controller="select"]
+      .stim-select-button.p-0[data-select-value="1" data-action="click->select#update" data-target="select.button" role="button" title="1"]
+        .stim-select-button-text.c-dark-blue
+          | 1
+        .color-strip-full.bg-pink
+      .stim-select-button.p-0[data-select-value="2" data-action="click->select#update" data-target="select.button" role="button" title="2"]
+        .stim-select-button-text.c-dark-blue
+          | 2
+        .color-strip-full.bg-pink
+      .stim-select-button.p-0[data-select-value="3" data-action="click->select#update" data-target="select.button" role="button" title="3"]
+        .stim-select-button-text.c-dark-blue
+          | 3
+        .color-strip-full.bg-pink
+      = f.input :layout, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.input' }
+      p.mt-3.c-dark-gray.small
+        em
+          | The different layouts provide great templates for each stage of your career. If you're starting out and want a cleaner page, choose Layout 1 (which does not display links or upcoming projects). To show more of the available information, choose Layout 2. If you're more established, choose Layout 3, which features an expanded resume section.
+  h2
+    | Main Banner Style
   .p-3
     = f.label :color_palette
     .stim-select.mb-2[data-controller="select"]
@@ -32,7 +53,7 @@
         .color-strip-full.bg-dark-blue
       = f.input :shape, collection: {"Plain" => 'plain', "Angular" => 'angular', "Curved" => 'curved'}, as: :hidden , input_html: { 'data-target' => 'select.input' }
   h2
-    | Content
+    | Main Banner Content
   .p-3
     = render 'shared/photo_uploader', f: f, field: :photo, show_label: true, original_photo: @artist.photo
     = f.input :super_title
@@ -40,6 +61,15 @@
     = f.input :title
     = f.input :description
     = f.input :button_text
+  h2
+    | Main Video (optional)
+  .p-3
+    = render 'shared/video_uploader', f: f
+  h2
+    | Quotation (optional)
+  .p-3
+    = f.input :quotation
+    = f.input :quotation_caption
   .border-bottom-light-gray.mb-3
   .p-3
     = hidden_field_tag(:stage, 'header')
