--- a/app/views/artists/_layout.html.slim
+++ b/app/views/artists/_layout.html.slim
@@ -1,39 +1,12 @@
 = simple_form_for artist, remote: true do |f|
   h2
-    | Layout Style
-  .p-3
-    = f.label :layout
-    .stim-select.mb-2[data-controller="select"]
-      .stim-select-button.p-0[data-select-value="1" data-action="click->select#update" data-target="select.button" role="button" title="1"]
-        .stim-select-button-text.c-dark-blue
-          | 1
-        .color-strip-full.bg-pink
-      .stim-select-button.p-0[data-select-value="2" data-action="click->select#update" data-target="select.button" role="button" title="2"]
-        .stim-select-button-text.c-dark-blue
-          | 2
-        .color-strip-full.bg-pink
-      .stim-select-button.p-0[data-select-value="3" data-action="click->select#update" data-target="select.button" role="button" title="3"]
-        .stim-select-button-text.c-dark-blue
-          | 3
-        .color-strip-full.bg-pink
-      = f.input :layout, collection: [1, 2, 3], as: :hidden, input_html: { 'data-target' => 'select.input' }
-      p.mt-3.c-dark-gray.small
-        em
-          | The different layouts provide great templates for each stage of your career. If you're starting out and want a cleaner page, choose Layout 1 (which does not display links or upcoming projects). To show more of the available information, choose Layout 2. If you're more established, choose Layout 3, which features an expanded resume section.
-  h2
-    | Banner Content
-  .p-3
-    = render 'shared/video_uploader', f: f
-    = f.input :quotation
-    = f.input :quotation_caption
-  h2
-    | Page Content
+    | Bio
   h3
     | About Me
   .p-3
     = f.input :about_me, label: false
   h2
-    | Resume
+    | Resume Items
   #resume-blocks-fields
     = f.simple_fields_for :resume_blocks do |block|
       = render 'resume_block_fields', f: block
