--- a/app/views/artists/_resume_block_fields.html.slim
+++ b/app/views/artists/_resume_block_fields.html.slim
@@ -1,7 +1,8 @@
 .nested-fields
   h3
     | Block 
-    = link_to_remove_association "- Remove", f, class: 'pl-3'
+    = link_to_remove_association f, class: 'pl-3' do
+      <i class="fas fa-trash"></i>
     i.fas.fa-grip-lines.handle.pr-3.cursor-move.c-light-gray.float-right
   .form-inline.pl-3.pr-3.pt-3
     = f.input :title, label_html: { class: 'pr-3' }
