finished up landign page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -50,3 +50,24 @@ html, body {
 .footer, .page-wrap:after {
   height: $footer-height;
 }
+
+.legal-foot-note {
+  h2 {
+    margin-bottom: 15px;
+  }
+}
+
+.footer-top {
+  padding: 55px 31px;
+  background: $dark-blue;
+  .title {
+    margin-bottom: 33px;
+  }
+  ul {
+    color: white;
+  }
+  li {
+    list-style: none;
+    opacity: .5;
+  }
+}
