--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,9 @@
 // Specific CSS for your home-page
 .contain-featured-artist {
-	overflow: hidden;
 	height: 500px;
 	.info-side {
 	    z-index: 1000;
-		padding: 68px;
+		padding: 68px 100px;
 		height: 400px;
 	    flex-direction: column;
 	    justify-content: center;
@@ -16,7 +15,7 @@
 	.featured-artist-photo {
 		background-size: cover;
 	    background-position: center;
-	  	border-radius: 80% 0 0 70%;
+	  	border-radius: 60% 0 0 60%;
 	    height: 660px;
 	    width: 110%;
 	    left: 0px;
@@ -29,6 +28,8 @@
 	.flickity-page-dots {
 		bottom: 45px;
 	}
+	margin: 33px;
+	box-shadow: $shadow-light;
 }
 
 .artist-carousel-cell {
@@ -36,8 +37,67 @@
 }
 
 #quotation-home {
-	height: 240px;
+	height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.featured-post-photo {
+	height: 130px;
+    margin-right: 27px;
+    box-shadow: $shadow-light;
+    border-radius: 3px;
+    min-width: 120px;
+    background-size: cover;
+}
+
+.home-quote {
+	font-size: 1.7rem !important;
+}
+
+.home-wave-top {
+	width: 55vw !important;
+}
+
+.home-banner {
+	height: 80vh;
+	.logo-works {
+		    width: 74%;
+		    position: absolute;
+		    top: -100px;
+		    left: -21px;
+	}
+}
+
+.intro-text {
+	flex-direction: column;
+}
+
+.post {
+	margin: 35px 0;
+	transition: ease .5s all;
+	padding: 13px;
+	border-radius: 3px;
+	a {
+		&:hover {
+			text-transform: underline;
+		}
+	}
+	.lockup {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: space-between;
+	    p {
+	    	max-width: 290px;
+	    }
+	}
+	&:hover {
+		box-shadow: $shadow-light;
+	}
+	.fake-link {
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 }
