--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,19 @@
+<div class="footer-top d-flex">
+  <ul class="legal-foot-note">
+  <h2 class="color c-white">Legal</h2>
+    <li> Service Terms & Conditions</li>
+    <li>Maintenance Policy</li>
+    <li>Privacy Policy</li>
+    <li>Cookie Policy</li>
+  </ul>
+  <ul class="legal-foot-note">
+    <h2 class="color c-white">Site Map</h2>
+    <li>Home</li>
+    <li>Contact</li>
+    <li>Our Artists</li>
+    <li>About</li>
+  </ul>
+</div>
 <footer class="footer">
   <div class="image">
     <%= link_to root_path do %>
