--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="image">
     <%= link_to root_path do %>
-      <%= image_tag 'logo-header.svg', class: 'logo' %>
+      <%= image_tag 'logo-header.svg', class: 'logo' unless @hidden_logo %>
     <% end %>
   </div>
   <%= render 'shared/navbar' %>
