--- a/app/views/shared/_quote_block.html.slim
+++ b/app/views/shared/_quote_block.html.slim
@@ -1,7 +1,7 @@
 div.quotation.background.bg-dark-blue id="quotation-home"
   p.color.c-white
-    q
-      = "Artyqes is Amazing"
-  br    
+    q.home-quote
+      = "This artist is the best artist this generation has to offer for the future"
+  br
   h4.title.color.c-white
     | Martin de Frutos
