--- a/app/views/artists/edit.html.slim
+++ b/app/views/artists/edit.html.slim
@@ -1,3 +1,3 @@
 .container-fluid
   #edit-dashboard.row[data-controller='frame']
-    = render 'dashboard', artist: @artist, stage: @stage
+    = render 'dashboard', artist: @artist, stage: @stage, palette: @palette
