--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -55,3 +55,37 @@
 		margin-bottom: 8px;
 	}
 }
+
+.card.news-post{
+  // News Posts Index
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  .card-link{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  @extend .p-3;
+  @extend .border;
+  @extend .shadow-box-light;
+  .card-text{
+    flex-grow: 4;
+  }
+  .card-photo{
+    height: 100%;
+    min-height: 7rem;
+    @extend .ml-2;
+    flex-grow: 0.5;
+    max-width: 10ch;
+    width: 100%;
+    float: right;
+    background-size: cover;
+    background-position: center;
+  }
+  &:hover{
+   @extend .border-light-blue; 
+  }
+}
